--- a/mitiv/linalg/shaped/DoubleShapedVector.html
+++ b/mitiv/linalg/shaped/DoubleShapedVector.html
@@ -265,7 +265,7 @@ extends <a href="../../../mitiv/linalg/shaped/ShapedVector.html" title="class in
 <!--   -->
 </a>
 <h3>Methods inherited from class&nbsp;mitiv.linalg.<a href="../../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a></h3>
-<code><a href="../../../mitiv/linalg/Vector.html#assertBelongsTo(mitiv.linalg.VectorSpace)">assertBelongsTo</a>, <a href="../../../mitiv/linalg/Vector.html#axpby(double, mitiv.linalg.Vector, double, mitiv.linalg.Vector)">axpby</a>, <a href="../../../mitiv/linalg/Vector.html#axpbypcz(double, mitiv.linalg.Vector, double, mitiv.linalg.Vector, double, mitiv.linalg.Vector)">axpbypcz</a>, <a href="../../../mitiv/linalg/Vector.html#belongsTo(mitiv.linalg.VectorSpace)">belongsTo</a>, <a href="../../../mitiv/linalg/Vector.html#copyFrom(mitiv.linalg.Vector)">copyFrom</a>, <a href="../../../mitiv/linalg/Vector.html#copyTo(mitiv.linalg.Vector)">copyTo</a>, <a href="../../../mitiv/linalg/Vector.html#dot(mitiv.linalg.Vector)">dot</a>, <a href="../../../mitiv/linalg/Vector.html#fill(double)">fill</a>, <a href="../../../mitiv/linalg/Vector.html#getNumber()">getNumber</a>, <a href="../../../mitiv/linalg/Vector.html#length()">length</a>, <a href="../../../mitiv/linalg/Vector.html#norm1()">norm1</a>, <a href="../../../mitiv/linalg/Vector.html#norm2()">norm2</a>, <a href="../../../mitiv/linalg/Vector.html#normInf()">normInf</a>, <a href="../../../mitiv/linalg/Vector.html#scale(double)">scale</a>, <a href="../../../mitiv/linalg/Vector.html#swap(mitiv.linalg.Vector)">swap</a>, <a href="../../../mitiv/linalg/Vector.html#toString()">toString</a>, <a href="../../../mitiv/linalg/Vector.html#zero()">zero</a></code></li>
+<code><a href="../../../mitiv/linalg/Vector.html#assertBelongsTo(mitiv.linalg.VectorSpace)">assertBelongsTo</a>, <a href="../../../mitiv/linalg/Vector.html#axpby(double, mitiv.linalg.Vector, double, mitiv.linalg.Vector)">axpby</a>, <a href="../../../mitiv/linalg/Vector.html#axpbypcz(double, mitiv.linalg.Vector, double, mitiv.linalg.Vector, double, mitiv.linalg.Vector)">axpbypcz</a>, <a href="../../../mitiv/linalg/Vector.html#belongsTo(mitiv.linalg.VectorSpace)">belongsTo</a>, <a href="../../../mitiv/linalg/Vector.html#copyFrom(mitiv.linalg.Vector)">copyFrom</a>, <a href="../../../mitiv/linalg/Vector.html#copyTo(mitiv.linalg.Vector)">copyTo</a>, <a href="../../../mitiv/linalg/Vector.html#dot(mitiv.linalg.Vector)">dot</a>, <a href="../../../mitiv/linalg/Vector.html#dot(mitiv.linalg.Vector, mitiv.linalg.Vector)">dot</a>, <a href="../../../mitiv/linalg/Vector.html#fill(double)">fill</a>, <a href="../../../mitiv/linalg/Vector.html#getNumber()">getNumber</a>, <a href="../../../mitiv/linalg/Vector.html#length()">length</a>, <a href="../../../mitiv/linalg/Vector.html#norm1()">norm1</a>, <a href="../../../mitiv/linalg/Vector.html#norm2()">norm2</a>, <a href="../../../mitiv/linalg/Vector.html#normInf()">normInf</a>, <a href="../../../mitiv/linalg/Vector.html#scale(double)">scale</a>, <a href="../../../mitiv/linalg/Vector.html#swap(mitiv.linalg.Vector)">swap</a>, <a href="../../../mitiv/linalg/Vector.html#toString()">toString</a>, <a href="../../../mitiv/linalg/Vector.html#zero()">zero</a></code></li>
 </ul>
 <ul class="blockList">
 <li class="blockList"><a name="methods_inherited_from_class_java.lang.Object">
@@ -387,7 +387,7 @@ extends <a href="../../../mitiv/linalg/shaped/ShapedVector.html" title="class in
 <pre>public final&nbsp;double&nbsp;get(int&nbsp;i)</pre>
 <div class="block"><strong>Description copied from class:&nbsp;<code><a href="../../../mitiv/linalg/Vector.html#get(int)">Vector</a></code></strong></div>
 <div class="block">Get one of the values gathered in the vector.
- 
+
  This method is not meant to be efficient, it is mainly provided for testing or
  debugging purposes.  To remain efficient, vectors should be managed at a more
  global level.</div>
@@ -409,7 +409,7 @@ extends <a href="../../../mitiv/linalg/shaped/ShapedVector.html" title="class in
        double&nbsp;value)</pre>
 <div class="block"><strong>Description copied from class:&nbsp;<code><a href="../../../mitiv/linalg/Vector.html#set(int, double)">Vector</a></code></strong></div>
 <div class="block">Set one of the values gathered in the vector.
- 
+
  This method is not meant to be efficient, it is mainly provided for testing or
  debugging purposes.  To remain efficient, vectors should be managed at a more
  global level.</div>
