--- a/index-all.html
+++ b/index-all.html
@@ -21235,7 +21235,7 @@ the order they are declared.</div>
 <dt><a href="./mitiv/optim/VMLMB.html" title="class in mitiv.optim"><span class="strong">VMLMB</span></a> - Class in <a href="./mitiv/optim/package-summary.html">mitiv.optim</a></dt>
 <dd>
 <div class="block">Multivariate non-linear optimization with simple bound constraints by
- VMLMB/BLMVM method.</div>
+ VMLMB method.</div>
 </dd>
 <dt><span class="strong"><a href="./mitiv/optim/VMLMB.html#VMLMB(mitiv.linalg.VectorSpace, mitiv.optim.BoundProjector, int, mitiv.optim.LineSearch)">VMLMB(VectorSpace, BoundProjector, int, LineSearch)</a></span> - Constructor for class mitiv.optim.<a href="./mitiv/optim/VMLMB.html" title="class in mitiv.optim">VMLMB</a></dt>
 <dd>&nbsp;</dd>
