--- a/mitiv/optim/VMLMB.html
+++ b/mitiv/optim/VMLMB.html
@@ -107,7 +107,7 @@
 <pre>public class <strong>VMLMB</strong>
 extends <a href="../../mitiv/optim/ReverseCommunicationOptimizerWithLineSearch.html" title="class in mitiv.optim">ReverseCommunicationOptimizerWithLineSearch</a></pre>
 <div class="block">Multivariate non-linear optimization with simple bound constraints by
- VMLMB/BLMVM method.
+ VMLMB method.
 
  <p>There are some differences compared to <a href="../../mitiv/optim/LBFGS.html" title="class in mitiv.optim"><code>LBFGS</code></a>, the unconstrained
  version of the algorithm:
