--- a/mitiv/optim/package-summary.html
+++ b/mitiv/optim/package-summary.html
@@ -168,7 +168,7 @@
 <td class="colFirst"><a href="../../mitiv/optim/VMLMB.html" title="class in mitiv.optim">VMLMB</a></td>
 <td class="colLast">
 <div class="block">Multivariate non-linear optimization with simple bound constraints by
- VMLMB/BLMVM method.</div>
+ VMLMB method.</div>
 </td>
 </tr>
 </tbody>
