--- a/mitiv/linalg/ArrayOps.html
+++ b/mitiv/linalg/ArrayOps.html
@@ -146,109 +146,109 @@ extends java.lang.Object</pre>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>static void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#axpby(double, double[], double, double[])">axpby</a></strong>(double&nbsp;alpha,
-     double[]&nbsp;x,
-     double&nbsp;beta,
-     double[]&nbsp;y)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#combine(double, double[], double, double[])">combine</a></strong>(double&nbsp;alpha,
+       double[]&nbsp;x,
+       double&nbsp;beta,
+       double[]&nbsp;y)</code>&nbsp;</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>static void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#axpby(double, double[], double, double[], double[])">axpby</a></strong>(double&nbsp;alpha,
-     double[]&nbsp;x,
-     double&nbsp;beta,
-     double[]&nbsp;y,
-     double[]&nbsp;dst)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#combine(double, double[], double, double[], double[])">combine</a></strong>(double&nbsp;alpha,
+       double[]&nbsp;x,
+       double&nbsp;beta,
+       double[]&nbsp;y,
+       double[]&nbsp;dst)</code>&nbsp;</td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>static void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#axpby(double, float[], double, float[])">axpby</a></strong>(double&nbsp;alpha,
-     float[]&nbsp;x,
-     double&nbsp;beta,
-     float[]&nbsp;y)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#combine(double, double[], double, double[], double, double[], double[])">combine</a></strong>(double&nbsp;alpha,
+       double[]&nbsp;x,
+       double&nbsp;beta,
+       double[]&nbsp;y,
+       double&nbsp;gamma,
+       double[]&nbsp;z,
+       double[]&nbsp;dst)</code>&nbsp;</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>static void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#axpby(double, float[], double, float[], float[])">axpby</a></strong>(double&nbsp;alpha,
-     float[]&nbsp;x,
-     double&nbsp;beta,
-     float[]&nbsp;y,
-     float[]&nbsp;dst)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#combine(double, float[], double, float[])">combine</a></strong>(double&nbsp;alpha,
+       float[]&nbsp;x,
+       double&nbsp;beta,
+       float[]&nbsp;y)</code>&nbsp;</td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>static void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#axpby(int, double, double[], double, double[])">axpby</a></strong>(int&nbsp;n,
-     double&nbsp;alpha,
-     double[]&nbsp;x,
-     double&nbsp;beta,
-     double[]&nbsp;y)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#combine(double, float[], double, float[], float[])">combine</a></strong>(double&nbsp;alpha,
+       float[]&nbsp;x,
+       double&nbsp;beta,
+       float[]&nbsp;y,
+       float[]&nbsp;dst)</code>&nbsp;</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>static void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#axpby(int, double, double[], double, double[], double[])">axpby</a></strong>(int&nbsp;n,
-     double&nbsp;alpha,
-     double[]&nbsp;x,
-     double&nbsp;beta,
-     double[]&nbsp;y,
-     double[]&nbsp;dst)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#combine(float, float[], float, float[], float, float[], float[])">combine</a></strong>(float&nbsp;alpha,
+       float[]&nbsp;x,
+       float&nbsp;beta,
+       float[]&nbsp;y,
+       float&nbsp;gamma,
+       float[]&nbsp;z,
+       float[]&nbsp;dst)</code>&nbsp;</td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>static void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#axpby(int, double, float[], double, float[])">axpby</a></strong>(int&nbsp;n,
-     double&nbsp;alpha,
-     float[]&nbsp;x,
-     double&nbsp;beta,
-     float[]&nbsp;y)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#combine(int, double, double[], double, double[])">combine</a></strong>(int&nbsp;n,
+       double&nbsp;alpha,
+       double[]&nbsp;x,
+       double&nbsp;beta,
+       double[]&nbsp;y)</code>&nbsp;</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>static void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#axpby(int, double, float[], double, float[], float[])">axpby</a></strong>(int&nbsp;n,
-     double&nbsp;alpha,
-     float[]&nbsp;x,
-     double&nbsp;beta,
-     float[]&nbsp;y,
-     float[]&nbsp;dst)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#combine(int, double, double[], double, double[], double[])">combine</a></strong>(int&nbsp;n,
+       double&nbsp;alpha,
+       double[]&nbsp;x,
+       double&nbsp;beta,
+       double[]&nbsp;y,
+       double[]&nbsp;dst)</code>&nbsp;</td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>static void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#axpbypcz(double, double[], double, double[], double, double[], double[])">axpbypcz</a></strong>(double&nbsp;alpha,
-        double[]&nbsp;x,
-        double&nbsp;beta,
-        double[]&nbsp;y,
-        double&nbsp;gamma,
-        double[]&nbsp;z,
-        double[]&nbsp;dst)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#combine(int, double, double[], double, double[], double, double[], double[])">combine</a></strong>(int&nbsp;n,
+       double&nbsp;alpha,
+       double[]&nbsp;x,
+       double&nbsp;beta,
+       double[]&nbsp;y,
+       double&nbsp;gamma,
+       double[]&nbsp;z,
+       double[]&nbsp;dst)</code>&nbsp;</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>static void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#axpbypcz(float, float[], float, float[], float, float[], float[])">axpbypcz</a></strong>(float&nbsp;alpha,
-        float[]&nbsp;x,
-        float&nbsp;beta,
-        float[]&nbsp;y,
-        float&nbsp;gamma,
-        float[]&nbsp;z,
-        float[]&nbsp;dst)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#combine(int, double, float[], double, float[])">combine</a></strong>(int&nbsp;n,
+       double&nbsp;alpha,
+       float[]&nbsp;x,
+       double&nbsp;beta,
+       float[]&nbsp;y)</code>&nbsp;</td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>static void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#axpbypcz(int, double, double[], double, double[], double, double[], double[])">axpbypcz</a></strong>(int&nbsp;n,
-        double&nbsp;alpha,
-        double[]&nbsp;x,
-        double&nbsp;beta,
-        double[]&nbsp;y,
-        double&nbsp;gamma,
-        double[]&nbsp;z,
-        double[]&nbsp;dst)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#combine(int, double, float[], double, float[], double, float[], float[])">combine</a></strong>(int&nbsp;n,
+       double&nbsp;alpha,
+       float[]&nbsp;x,
+       double&nbsp;beta,
+       float[]&nbsp;y,
+       double&nbsp;gamma,
+       float[]&nbsp;z,
+       float[]&nbsp;dst)</code>&nbsp;</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>static void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#axpbypcz(int, double, float[], double, float[], double, float[], float[])">axpbypcz</a></strong>(int&nbsp;n,
-        double&nbsp;alpha,
-        float[]&nbsp;x,
-        double&nbsp;beta,
-        float[]&nbsp;y,
-        double&nbsp;gamma,
-        float[]&nbsp;z,
-        float[]&nbsp;dst)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/linalg/ArrayOps.html#combine(int, double, float[], double, float[], float[])">combine</a></strong>(int&nbsp;n,
+       double&nbsp;alpha,
+       float[]&nbsp;x,
+       double&nbsp;beta,
+       float[]&nbsp;y,
+       float[]&nbsp;dst)</code>&nbsp;</td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>static void</code></td>
@@ -1540,170 +1540,170 @@ extends java.lang.Object</pre>
         double&nbsp;alpha)</pre>
 </li>
 </ul>
-<a name="axpby(int, double, double[], double, double[])">
+<a name="combine(int, double, double[], double, double[])">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
-<h4>axpby</h4>
-<pre>public static&nbsp;void&nbsp;axpby(int&nbsp;n,
-         double&nbsp;alpha,
-         double[]&nbsp;x,
-         double&nbsp;beta,
-         double[]&nbsp;y)</pre>
+<h4>combine</h4>
+<pre>public static&nbsp;void&nbsp;combine(int&nbsp;n,
+           double&nbsp;alpha,
+           double[]&nbsp;x,
+           double&nbsp;beta,
+           double[]&nbsp;y)</pre>
 </li>
 </ul>
-<a name="axpby(int, double, double[], double, double[], double[])">
+<a name="combine(int, double, double[], double, double[], double[])">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
-<h4>axpby</h4>
-<pre>public static&nbsp;void&nbsp;axpby(int&nbsp;n,
-         double&nbsp;alpha,
-         double[]&nbsp;x,
-         double&nbsp;beta,
-         double[]&nbsp;y,
-         double[]&nbsp;dst)</pre>
+<h4>combine</h4>
+<pre>public static&nbsp;void&nbsp;combine(int&nbsp;n,
+           double&nbsp;alpha,
+           double[]&nbsp;x,
+           double&nbsp;beta,
+           double[]&nbsp;y,
+           double[]&nbsp;dst)</pre>
 </li>
 </ul>
-<a name="axpby(double, double[], double, double[])">
+<a name="combine(double, double[], double, double[])">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
-<h4>axpby</h4>
-<pre>public static&nbsp;void&nbsp;axpby(double&nbsp;alpha,
-         double[]&nbsp;x,
-         double&nbsp;beta,
-         double[]&nbsp;y)</pre>
+<h4>combine</h4>
+<pre>public static&nbsp;void&nbsp;combine(double&nbsp;alpha,
+           double[]&nbsp;x,
+           double&nbsp;beta,
+           double[]&nbsp;y)</pre>
 </li>
 </ul>
-<a name="axpby(double, double[], double, double[], double[])">
+<a name="combine(double, double[], double, double[], double[])">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
-<h4>axpby</h4>
-<pre>public static&nbsp;void&nbsp;axpby(double&nbsp;alpha,
-         double[]&nbsp;x,
-         double&nbsp;beta,
-         double[]&nbsp;y,
-         double[]&nbsp;dst)</pre>
+<h4>combine</h4>
+<pre>public static&nbsp;void&nbsp;combine(double&nbsp;alpha,
+           double[]&nbsp;x,
+           double&nbsp;beta,
+           double[]&nbsp;y,
+           double[]&nbsp;dst)</pre>
 </li>
 </ul>
-<a name="axpby(int, double, float[], double, float[])">
+<a name="combine(int, double, float[], double, float[])">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
-<h4>axpby</h4>
-<pre>public static&nbsp;void&nbsp;axpby(int&nbsp;n,
-         double&nbsp;alpha,
-         float[]&nbsp;x,
-         double&nbsp;beta,
-         float[]&nbsp;y)</pre>
+<h4>combine</h4>
+<pre>public static&nbsp;void&nbsp;combine(int&nbsp;n,
+           double&nbsp;alpha,
+           float[]&nbsp;x,
+           double&nbsp;beta,
+           float[]&nbsp;y)</pre>
 </li>
 </ul>
-<a name="axpby(int, double, float[], double, float[], float[])">
+<a name="combine(int, double, float[], double, float[], float[])">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
-<h4>axpby</h4>
-<pre>public static&nbsp;void&nbsp;axpby(int&nbsp;n,
-         double&nbsp;alpha,
-         float[]&nbsp;x,
-         double&nbsp;beta,
-         float[]&nbsp;y,
-         float[]&nbsp;dst)</pre>
+<h4>combine</h4>
+<pre>public static&nbsp;void&nbsp;combine(int&nbsp;n,
+           double&nbsp;alpha,
+           float[]&nbsp;x,
+           double&nbsp;beta,
+           float[]&nbsp;y,
+           float[]&nbsp;dst)</pre>
 </li>
 </ul>
-<a name="axpby(double, float[], double, float[])">
+<a name="combine(double, float[], double, float[])">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
-<h4>axpby</h4>
-<pre>public static&nbsp;void&nbsp;axpby(double&nbsp;alpha,
-         float[]&nbsp;x,
-         double&nbsp;beta,
-         float[]&nbsp;y)</pre>
+<h4>combine</h4>
+<pre>public static&nbsp;void&nbsp;combine(double&nbsp;alpha,
+           float[]&nbsp;x,
+           double&nbsp;beta,
+           float[]&nbsp;y)</pre>
 </li>
 </ul>
-<a name="axpby(double, float[], double, float[], float[])">
+<a name="combine(double, float[], double, float[], float[])">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
-<h4>axpby</h4>
-<pre>public static&nbsp;void&nbsp;axpby(double&nbsp;alpha,
-         float[]&nbsp;x,
-         double&nbsp;beta,
-         float[]&nbsp;y,
-         float[]&nbsp;dst)</pre>
+<h4>combine</h4>
+<pre>public static&nbsp;void&nbsp;combine(double&nbsp;alpha,
+           float[]&nbsp;x,
+           double&nbsp;beta,
+           float[]&nbsp;y,
+           float[]&nbsp;dst)</pre>
 </li>
 </ul>
-<a name="axpbypcz(int, double, double[], double, double[], double, double[], double[])">
+<a name="combine(int, double, double[], double, double[], double, double[], double[])">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
-<h4>axpbypcz</h4>
-<pre>public static&nbsp;void&nbsp;axpbypcz(int&nbsp;n,
-            double&nbsp;alpha,
-            double[]&nbsp;x,
-            double&nbsp;beta,
-            double[]&nbsp;y,
-            double&nbsp;gamma,
-            double[]&nbsp;z,
-            double[]&nbsp;dst)</pre>
+<h4>combine</h4>
+<pre>public static&nbsp;void&nbsp;combine(int&nbsp;n,
+           double&nbsp;alpha,
+           double[]&nbsp;x,
+           double&nbsp;beta,
+           double[]&nbsp;y,
+           double&nbsp;gamma,
+           double[]&nbsp;z,
+           double[]&nbsp;dst)</pre>
 </li>
 </ul>
-<a name="axpbypcz(double, double[], double, double[], double, double[], double[])">
+<a name="combine(double, double[], double, double[], double, double[], double[])">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
-<h4>axpbypcz</h4>
-<pre>public static&nbsp;void&nbsp;axpbypcz(double&nbsp;alpha,
-            double[]&nbsp;x,
-            double&nbsp;beta,
-            double[]&nbsp;y,
-            double&nbsp;gamma,
-            double[]&nbsp;z,
-            double[]&nbsp;dst)</pre>
+<h4>combine</h4>
+<pre>public static&nbsp;void&nbsp;combine(double&nbsp;alpha,
+           double[]&nbsp;x,
+           double&nbsp;beta,
+           double[]&nbsp;y,
+           double&nbsp;gamma,
+           double[]&nbsp;z,
+           double[]&nbsp;dst)</pre>
 </li>
 </ul>
-<a name="axpbypcz(int, double, float[], double, float[], double, float[], float[])">
+<a name="combine(int, double, float[], double, float[], double, float[], float[])">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
-<h4>axpbypcz</h4>
-<pre>public static&nbsp;void&nbsp;axpbypcz(int&nbsp;n,
-            double&nbsp;alpha,
-            float[]&nbsp;x,
-            double&nbsp;beta,
-            float[]&nbsp;y,
-            double&nbsp;gamma,
-            float[]&nbsp;z,
-            float[]&nbsp;dst)</pre>
+<h4>combine</h4>
+<pre>public static&nbsp;void&nbsp;combine(int&nbsp;n,
+           double&nbsp;alpha,
+           float[]&nbsp;x,
+           double&nbsp;beta,
+           float[]&nbsp;y,
+           double&nbsp;gamma,
+           float[]&nbsp;z,
+           float[]&nbsp;dst)</pre>
 </li>
 </ul>
-<a name="axpbypcz(float, float[], float, float[], float, float[], float[])">
+<a name="combine(float, float[], float, float[], float, float[], float[])">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
-<h4>axpbypcz</h4>
-<pre>public static&nbsp;void&nbsp;axpbypcz(float&nbsp;alpha,
-            float[]&nbsp;x,
-            float&nbsp;beta,
-            float[]&nbsp;y,
-            float&nbsp;gamma,
-            float[]&nbsp;z,
-            float[]&nbsp;dst)</pre>
+<h4>combine</h4>
+<pre>public static&nbsp;void&nbsp;combine(float&nbsp;alpha,
+           float[]&nbsp;x,
+           float&nbsp;beta,
+           float[]&nbsp;y,
+           float&nbsp;gamma,
+           float[]&nbsp;z,
+           float[]&nbsp;dst)</pre>
 </li>
 </ul>
 <a name="dot(java.lang.Object, java.lang.Object)">
