--- a/index-all.html
+++ b/index-all.html
@@ -12872,32 +12872,6 @@
 </dd>
 <dt><span class="strong"><a href="./mitiv/io/DataFormat.html#printImageInfo(java.io.PrintStream, java.awt.image.BufferedImage, java.lang.String)">printImageInfo(PrintStream, BufferedImage, String)</a></span> - Static method in enum mitiv.io.<a href="./mitiv/io/DataFormat.html" title="enum in mitiv.io">DataFormat</a></dt>
 <dd>&nbsp;</dd>
-<dt><span class="strong"><a href="./mitiv/cost/FiniteDifferenceOperator.html#privApply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">privApply(Vector, Vector, int)</a></span> - Method in class mitiv.cost.<a href="./mitiv/cost/FiniteDifferenceOperator.html" title="class in mitiv.cost">FiniteDifferenceOperator</a></dt>
-<dd>&nbsp;</dd>
-<dt><span class="strong"><a href="./mitiv/deconv/Convolution.html#privApply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">privApply(Vector, Vector, int)</a></span> - Method in class mitiv.deconv.<a href="./mitiv/deconv/Convolution.html" title="class in mitiv.deconv">Convolution</a></dt>
-<dd>&nbsp;</dd>
-<dt><span class="strong"><a href="./mitiv/deconv/ConvolutionOperator.html#privApply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">privApply(Vector, Vector, int)</a></span> - Method in class mitiv.deconv.<a href="./mitiv/deconv/ConvolutionOperator.html" title="class in mitiv.deconv">ConvolutionOperator</a></dt>
-<dd>&nbsp;</dd>
-<dt><span class="strong"><a href="./mitiv/deconv/WeightingOperator.html#privApply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">privApply(Vector, Vector, int)</a></span> - Method in class mitiv.deconv.<a href="./mitiv/deconv/WeightingOperator.html" title="class in mitiv.deconv">WeightingOperator</a></dt>
-<dd>&nbsp;</dd>
-<dt><span class="strong"><a href="./mitiv/invpb/LeftHandSideMatrix.html#privApply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">privApply(Vector, Vector, int)</a></span> - Method in class mitiv.invpb.<a href="./mitiv/invpb/LeftHandSideMatrix.html" title="class in mitiv.invpb">LeftHandSideMatrix</a></dt>
-<dd>
-<div class="block">Apply the LHS operator A = Ht.W.H + mu*Q</div>
-</dd>
-<dt><span class="strong"><a href="./mitiv/linalg/IdentityOperator.html#privApply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">privApply(Vector, Vector, int)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/IdentityOperator.html" title="class in mitiv.linalg">IdentityOperator</a></dt>
-<dd>&nbsp;</dd>
-<dt><span class="strong"><a href="./mitiv/linalg/LinearOperator.html#privApply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">privApply(Vector, Vector, int)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/LinearOperator.html" title="class in mitiv.linalg">LinearOperator</a></dt>
-<dd>
-<div class="block">Apply a linear operator (or its adjoint) to a vector.</div>
-</dd>
-<dt><span class="strong"><a href="./mitiv/linalg/RankOneOperator.html#privApply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">privApply(Vector, Vector, int)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/RankOneOperator.html" title="class in mitiv.linalg">RankOneOperator</a></dt>
-<dd>&nbsp;</dd>
-<dt><span class="strong"><a href="./mitiv/linalg/ScaleOperator.html#privApply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">privApply(Vector, Vector, int)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/ScaleOperator.html" title="class in mitiv.linalg">ScaleOperator</a></dt>
-<dd>&nbsp;</dd>
-<dt><span class="strong"><a href="./mitiv/linalg/shaped/RealComplexFFT.html#privApply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">privApply(Vector, Vector, int)</a></span> - Method in class mitiv.linalg.shaped.<a href="./mitiv/linalg/shaped/RealComplexFFT.html" title="class in mitiv.linalg.shaped">RealComplexFFT</a></dt>
-<dd>&nbsp;</dd>
-<dt><span class="strong"><a href="./mitiv/optim/LBFGSOperator.html#privApply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">privApply(Vector, Vector, int)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/LBFGSOperator.html" title="class in mitiv.optim">LBFGSOperator</a></dt>
-<dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/deconv/Deconvolution.html#PROCESSING_1D">PROCESSING_1D</a></span> - Static variable in class mitiv.deconv.<a href="./mitiv/deconv/Deconvolution.html" title="class in mitiv.deconv">Deconvolution</a></dt>
 <dd>
 <div class="block">Compute all the operations with 1D arrays</div>
@@ -22847,6 +22821,32 @@ the order they are declared.</div>
 </a>
 <h2 class="title">_</h2>
 <dl>
+<dt><span class="strong"><a href="./mitiv/cost/FiniteDifferenceOperator.html#_apply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">_apply(Vector, Vector, int)</a></span> - Method in class mitiv.cost.<a href="./mitiv/cost/FiniteDifferenceOperator.html" title="class in mitiv.cost">FiniteDifferenceOperator</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/deconv/Convolution.html#_apply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">_apply(Vector, Vector, int)</a></span> - Method in class mitiv.deconv.<a href="./mitiv/deconv/Convolution.html" title="class in mitiv.deconv">Convolution</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/deconv/ConvolutionOperator.html#_apply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">_apply(Vector, Vector, int)</a></span> - Method in class mitiv.deconv.<a href="./mitiv/deconv/ConvolutionOperator.html" title="class in mitiv.deconv">ConvolutionOperator</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/deconv/WeightingOperator.html#_apply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">_apply(Vector, Vector, int)</a></span> - Method in class mitiv.deconv.<a href="./mitiv/deconv/WeightingOperator.html" title="class in mitiv.deconv">WeightingOperator</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/invpb/LeftHandSideMatrix.html#_apply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">_apply(Vector, Vector, int)</a></span> - Method in class mitiv.invpb.<a href="./mitiv/invpb/LeftHandSideMatrix.html" title="class in mitiv.invpb">LeftHandSideMatrix</a></dt>
+<dd>
+<div class="block">Apply the LHS operator A = Ht.W.H + mu*Q</div>
+</dd>
+<dt><span class="strong"><a href="./mitiv/linalg/IdentityOperator.html#_apply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">_apply(Vector, Vector, int)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/IdentityOperator.html" title="class in mitiv.linalg">IdentityOperator</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/linalg/LinearOperator.html#_apply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">_apply(Vector, Vector, int)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/LinearOperator.html" title="class in mitiv.linalg">LinearOperator</a></dt>
+<dd>
+<div class="block">Apply a linear operator (or its adjoint) to a vector.</div>
+</dd>
+<dt><span class="strong"><a href="./mitiv/linalg/RankOneOperator.html#_apply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">_apply(Vector, Vector, int)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/RankOneOperator.html" title="class in mitiv.linalg">RankOneOperator</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/linalg/ScaleOperator.html#_apply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">_apply(Vector, Vector, int)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/ScaleOperator.html" title="class in mitiv.linalg">ScaleOperator</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/linalg/shaped/RealComplexFFT.html#_apply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">_apply(Vector, Vector, int)</a></span> - Method in class mitiv.linalg.shaped.<a href="./mitiv/linalg/shaped/RealComplexFFT.html" title="class in mitiv.linalg.shaped">RealComplexFFT</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/optim/LBFGSOperator.html#_apply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">_apply(Vector, Vector, int)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/LBFGSOperator.html" title="class in mitiv.optim">LBFGSOperator</a></dt>
+<dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/linalg/shaped/DoubleShapedVectorSpace.html#_clone(mitiv.linalg.shaped.DoubleShapedVector)">_clone(DoubleShapedVector)</a></span> - Method in class mitiv.linalg.shaped.<a href="./mitiv/linalg/shaped/DoubleShapedVectorSpace.html" title="class in mitiv.linalg.shaped">DoubleShapedVectorSpace</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/linalg/shaped/DoubleShapedVectorSpace.html#_clone(mitiv.linalg.Vector)">_clone(Vector)</a></span> - Method in class mitiv.linalg.shaped.<a href="./mitiv/linalg/shaped/DoubleShapedVectorSpace.html" title="class in mitiv.linalg.shaped">DoubleShapedVectorSpace</a></dt>
